/*
 * $Id: ChangeLog,v 1.80 2002/02/16 02:29:31 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-02-15 18:48 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbf1.c
    ! Corrcted 1 compiler warning.

2002-02-15 15:45 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbfast.h
  * source/vm/fastitem.c
    + Added: BYTE   hb_itemParamId( PHB_ITEM pItem );

  * source/compiler/hbgenerr.c
    ! Fixed order of a Warning Message.

  * source/vm/fm.c
    * Minor correction to errror messages.

  * source/pp/ppcore.c
    ! Fixed bug in md_strAt()

  * source/vm/arrays.c
    * Minor revision to tracing.
    + Added some work in progress within #if 0

  * source/vm/estack.c
    + Added some work in progress within #if 0

  * source/vm/hvm.c
    + Added some work in progress within #if 0
    + Added Some tracing.
    * Minro formatting.
    * Added inplace code for HB_P_FUNCTION* to avoid call to hb_vmFunction() which is forced to use hb_itemCopy()
      instead of hb_itemForwardValue() to avoid problem with ill behaved use of hb_stack.Return in 3rd party products like FWH.

  * utils/hbtest/make_c5x.bat
    * Minor correction.

2002-02-05 02:04 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbf1.c
     ! reverted changes to hb_dbfGoTo
   * source/rdd/dbfcdx/dbfcdx1.c
     ! fixed bug with bof flag

2002-02-04 23:10 UTC+0100 JFL (mafact) <jfl@mafact.com>
   * source/vm/hvm.c
   * source/vm/classes.c
     ! fixed bug where object overloading was using modulus in place of power
       for "**" expression

2002-02-04 02:23 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbf1.c
     ! fixed bug with flags in hb_dbfGoTo

2002-02-20 08:50 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
  * source/rtl/isprint.c
    * Fixes for cygwin
  * utils/hbmake/hbmake.prg