@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.80 2002/02/16 02:29:31 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.81 2002/02/16 02:54:43 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-02-15 19:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    ! Fixed bug in ParseCommand()
 
 2002-02-15 18:48 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rdd/dbf1.c
